@@ -4,8 +4,11 @@ namespace FormRelay\Core\ConfigurationResolver\Evaluation;
 
 class EqualsEvaluation extends AbstractComparisonEvaluation
 {
-    protected function evalValue($fieldValue, array $keysEvaluated = [])
+    public function eval(array $keysEvaluated = []): bool
     {
-        return $this->compare($fieldValue, $this->resolveContent($this->configuration));
+        return $this->compare(
+            $this->getSelectedValue(),
+            $this->resolveContent($this->configuration)
+        );
     }
 }
