@@ -7,11 +7,7 @@ class NotEvaluation extends Evaluation
     public function eval(array $keysEvaluated = []): bool
     {
         /** @var EvaluationInterface $evaluation */
-        $evaluation = $this->resolveKeyword(
-            is_array($this->configuration) ? 'general' : 'equals',
-            $this->configuration,
-            $this->context
-        );
+        $evaluation = $this->resolveKeyword('general', $this->configuration);
         return !$evaluation->eval($keysEvaluated);
     }
 }
