@@ -10,6 +10,7 @@ use FormRelay\Core\ConfigurationResolver\Evaluation\EqualsEvaluation;
 use FormRelay\Core\ConfigurationResolver\Evaluation\FieldEvaluation;
 use FormRelay\Core\ConfigurationResolver\Evaluation\GeneralEvaluation;
 use FormRelay\Core\ConfigurationResolver\Evaluation\IndexEvaluation;
+use FormRelay\Core\ConfigurationResolver\Evaluation\OrEvaluation;
 use FormRelay\Core\ConfigurationResolver\Evaluation\SelfEvaluation;
 use FormRelay\Core\ConfigurationResolver\ValueMapper\GeneralValueMapper;
 use FormRelay\Core\ConfigurationResolver\ValueMapper\SelfValueMapper;
@@ -81,9 +82,8 @@ trait RegistryTestTrait //  extends \PHPUnit\Framework\TestCase
         $this->registry->registerEvaluation(EqualsEvaluation::class);
         $this->registry->registerEvaluation(FieldEvaluation::class);
         $this->registry->registerEvaluation(IndexEvaluation::class);
-
-        // TODO GeneralEvaluation should just extend AndEvaluation instead of invoking it
         $this->registry->registerEvaluation(AndEvaluation::class);
+        $this->registry->registerEvaluation(OrEvaluation::class);
     }
 
     protected function registerBasicValueMappers()
